--- a/CURD_Practice/Views/Persons/Index.cshtml
+++ b/CURD_Practice/Views/Persons/Index.cshtml
@@ -1,5 +1,36 @@
 ﻿@{
 	ViewBag.Title = "Persons";
 }
+@model IEnumerable<PersonResponse> ;
 
 <h1>Persons</h1>
+
+<table class="table w-100 mt">
+	<thead>
+		<tr>
+			<th>Person Name</th>
+			<th>Email</th>
+			<th>Date of Birth</th>
+			<th>Age</th>
+			<th>Gender</th>
+			<th>Country</th>
+			<th>Address</th>
+			<th>News Letter</th>
+		</tr>
+	</thead>
+	<tbody>
+		@foreach(PersonResponse person in Model)
+		{
+			<tr>
+				<td>@person.PersonName</td>
+				<td>@person.Email</td>
+				<td>@person.DateOfBirth?.ToString("dd MM yyyy")</td>
+				<td>@person.Age</td>
+				<td>@person.Gender</td>
+				<td>@person.Country</td>
+				<td>@person.Address</td>
+				<td>@person.ReceiveNewsLetters</td>
+			</tr>
+		}
+	</tbody>
+</table>
