--- a/CURD_Practice/Views/Persons/Create.cshtml
+++ b/CURD_Practice/Views/Persons/Create.cshtml
@@ -8,6 +8,16 @@
 <div class="w-50">
 	<form action="~/persons/create" method="post">
 
+		@*PersonName*@
+		<div class="form-field flex">
+			<div class="w-25">
+				<label for="PersonName" class="form-label pt">Person Name</label>
+			</div>
+			<div class="flex-1">
+				<input type="text" id="PersonName" name="PersonName" class="form-input" />
+			</div>
+		</div>
+
 		@* Email *@
 		<div class="form-field flex">
 			<div class="w-25">
@@ -35,10 +45,10 @@
 			</div>
 			<div class="flex-1">
 				<input type="radio" id="Male" name="Gender" value="Male" />
-				<label for="Male">Male</label>
+				<label for="Male" class="ml">Male</label>
 
 				<input type="radio" id="Female" name="Gender" value="Female" class="ml" />
-				<label for="Female">Female</label>
+				<label for="Female" class="ml">Female</label>
 			</div>
 		</div>
 
@@ -58,6 +68,47 @@
 			</div>
 		</div>
 
-		<button>Submit</button>
+		@*Address*@
+		<div class="form-field flex">
+			<div class="w-25">
+				<label for="Address" class="form-label pt">Address</label>
+			</div>
+			<div class="flex-1">
+				<textarea id="Address" name="Address" class="form-input"></textarea>
+			</div>
+		</div>
+
+		@*ReceiveNewsLetters*@
+		<div class="form-field flex">
+			<div class="w-25">
+				<label for="ReceiveNewsLetters" class="form-label">Receive News Letters</label>
+			</div>
+			<div class="flex-1">
+				<input type="checkbox" name="ReceiveNewsLetters" id="ReceiveNewsLetters" value="true" />
+			</div>
+		</div>
+
+		@*Submit*@
+		<div class="form-field flex">
+			<div class="w-25">
+			</div>
+			<div class="flex-1">
+				<button class="button button-green-back">Submit</button>
+
+				@if(ViewBag.Erros != null)
+				{
+					<div class="text-red ml">
+						<ul>
+							@foreach (string error in ViewBag.Errors)
+							{
+								<li class="ml">@error</li>
+							}
+						</ul>
+					</div>
+				}
+
+			</div>
+		</div>
+
 	</form>
 </div>
