--- a/CURD_Practice/Views/Persons/Create.cshtml
+++ b/CURD_Practice/Views/Persons/Create.cshtml
@@ -13,7 +13,7 @@
 		@*PersonName*@
 		<div class="form-field flex">
 			<div class="w-25">
-				<label for="PersonName" class="form-label pt">Person Name</label>
+				<label asp-for="PersonName" class="form-label pt">Person Name</label>
 			</div>
 			<div class="flex-1">
 				<input  asp-for="PersonName" class="form-input" />
@@ -23,7 +23,7 @@
 		@* Email *@
 		<div class="form-field flex">
 			<div class="w-25">
-				<label for="Email" class="form-label pt">Email</label>
+				<label asp-for="Email" class="form-label pt">Email</label>
 			</div>
 			<div class="flex-1">
 				<input asp-for="Email" type="email" class="form-input" />
@@ -33,7 +33,7 @@
 		@*DateOfBirth*@
 		<div class="form-field flex">
 			<div class="w-25">
-				<label for="DateOfBirth" class="form-label pt">Date of Birth</label>
+				<label asp-for="DateOfBirth" class="form-label pt">Date of Birth</label>
 			</div>
 			<div class="flex-1">
 				<input asp-for="DateOfBirth" type="date" class="form-input" />
@@ -52,7 +52,7 @@
 				@foreach( string gender in genders)
 				{
 					<input asp-for="Gender" type="radio" value="@gender" />
-					<label for="@gender" class="ml">@gender</label>
+					<label asp-for="@gender" class="ml">@gender</label>
 				}
 			</div>
 		</div>
@@ -60,15 +60,11 @@
 		@*Country*@
 		<div class="form-field flex">
 			<div class="w-25">
-				<label class="form-label" for="CountryId">Country</label>
+				<label asp-for="CountryId" class="form-label">Country</label>
 			</div>
 			<div class="flex-1">
-				<select asp-for="CountryId" class="form-input">
+				<select asp-for="CountryId" class="form-input" asp-items="@ViewBag.Countries">
 					<option value="">Please Select</option>
-					@foreach (CountryResponse country in ViewBag.Countries)
-					{
-						<option value="@country.CountryId">@country.CountryName</option>
-					}
 				</select>
 			</div>
 		</div>
@@ -76,7 +72,7 @@
 		@*Address*@
 		<div class="form-field flex">
 			<div class="w-25">
-				<label for="Address" class="form-label pt">Address</label>
+				<label asp-for="Address" class="form-label pt">Address</label>
 			</div>
 			<div class="flex-1">
 				<textarea asp-for="Address" class="form-input"></textarea>
@@ -86,7 +82,7 @@
 		@*ReceiveNewsLetters*@
 		<div class="form-field flex">
 			<div class="w-25">
-				<label for="ReceiveNewsLetters" class="form-label">Receive News Letters</label>
+				<label asp-for="ReceiveNewsLetters" class="form-label">Receive News Letters</label>
 			</div>
 			<div class="flex-1">
 				<input asp-for="ReceiveNewsLetters" type="checkbox" value="true" />
