--- a/CURD_Practice/Views/Persons/Create.cshtml
+++ b/CURD_Practice/Views/Persons/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PersonAddRequest;
 
 @{
-	ViewBag.Titel = "Create Person";
+	ViewBag.Title = "Create Person";
 }
 
 <a asp-controller="Persons" asp-action="Index" class="link-hover">Back to Persons List</a>
@@ -17,6 +17,7 @@
 			</div>
 			<div class="flex-1">
 				<input  asp-for="PersonName" class="form-input" />
+				<span asp-validation-for="PersonName" class="text-red"></span>
 			</div>
 		</div>
 
@@ -27,6 +28,7 @@
 			</div>
 			<div class="flex-1">
 				<input asp-for="Email" type="email" class="form-input" />
+				<span asp-validation-for="Email" class="text-red"></span>
 			</div>
 		</div>
 
@@ -37,6 +39,7 @@
 			</div>
 			<div class="flex-1">
 				<input asp-for="DateOfBirth" type="date" class="form-input" />
+				<span asp-validation-for="DateOfBirth" class="text-red"></span>
 			</div>
 		</div>
 
@@ -54,6 +57,7 @@
 					<input asp-for="Gender" type="radio" value="@gender" />
 					<label asp-for="@gender" class="ml">@gender</label>
 				}
+				<span asp-validation-for="Gender" class="text-red"></span>
 			</div>
 		</div>
 
@@ -66,6 +70,7 @@
 				<select asp-for="CountryId" class="form-input" asp-items="@ViewBag.Countries">
 					<option value="">Please Select</option>
 				</select>
+				<span asp-validation-for="CountryId" class="text-red"></span>
 			</div>
 		</div>
 
@@ -76,6 +81,7 @@
 			</div>
 			<div class="flex-1">
 				<textarea asp-for="Address" class="form-input"></textarea>
+				<span asp-validation-for="Address" class="text-red"></span>
 			</div>
 		</div>
 
@@ -86,6 +92,7 @@
 			</div>
 			<div class="flex-1">
 				<input asp-for="ReceiveNewsLetters" type="checkbox" value="true" />
+				<span asp-validation-for="ReceiveNewsLetters" class="text-red"></span>
 			</div>
 		</div>
 
@@ -95,6 +102,8 @@
 			</div>
 			<div class="flex-1">
 				<button class="button button-green-back">Submit</button>
+
+				<div asp-validation-summary="All" class="text-red"></div>
 
 				@if(ViewBag.Erros != null)
 				{
@@ -113,3 +122,9 @@
 
 	</form>
 </div>
+
+@section script {
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" asp-fallback-test="window.jQuery" asp-fallback-src="~/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.4/jquery.validate.min.js" asp-fallback-test="window.jQuery.validator" asp-fallback-src="~/jquery.validate.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js" asp-fallback-test="window.jQuery.validator.unobstrusive" asp-fallback-src="~/jquery.validate.unobtrusive.min.js"></script>
+}
