Edit and Delete

--- a/CURD_Practice/Views/Persons/Edit.cshtml
+++ b/CURD_Practice/Views/Persons/Edit.cshtml
@@ -8,7 +8,7 @@
 <h2>Edit Person</h2>
 
 <div class="w-50">
-	<form asp-controller="Persons" asp-action="Create" method="post">
+	<form asp-controller="Persons" asp-action="Edit" method="post">
 
 		<input type ="hidden" asp-for="PersonId"/>
 
