--- a/CURD_Practice/Views/Persons/Index.cshtml
+++ b/CURD_Practice/Views/Persons/Index.cshtml
@@ -113,7 +113,9 @@
 				<td style="width:10%">@person.Country</td>
 				<td style="width:15%">@person.Address</td>
 				<td style="width:20%">@person.ReceiveNewsLetters</td>
-				<td style="width:20%"> <a asp-controller="Persons" asp-action="Edit" asp-route-personId="@person.PersonId" >Edit</a> </td>
+				<td style="width:20%"> <a asp-controller="Persons" asp-action="Edit" asp-route-personId="@person.PersonId" >Edit</a> 
+						<a asp-controller="Persons" asp-action="Delete" asp-route-personId="@person.PersonId">Delete</a>
+					</td>
 			</tr>
 		}
 	</tbody>
