--- a/CURD_Practice/Views/Persons/Index.cshtml
+++ b/CURD_Practice/Views/Persons/Index.cshtml
@@ -7,6 +7,7 @@
 
 <h1>Persons</h1>
 	<a asp-controller="Persons" asp-action="Create" class="link-hover">Create Person</a>
+	<a asp-controller="Persons" asp-action="PersonsPdf" class="link-hover">Download as PDF</a>
 
 <div class="box flex ">
 
