--- a/CURD_Practice/Views/Persons/Index.cshtml
+++ b/CURD_Practice/Views/Persons/Index.cshtml
@@ -8,6 +8,8 @@
 <h1>Persons</h1>
 	<a asp-controller="Persons" asp-action="Create" class="link-hover">Create Person</a>
 	<a asp-controller="Persons" asp-action="PersonsPdf" class="link-hover">Download as PDF</a>
+	<a asp-controller="Persons" asp-action="PersonsCsv" class="link-hover">Download as CSV</a>
+	<a asp-controller="Persons" asp-action="PersonsCsvCustom" class="link-hover">Download as CSV</a>
 
 <div class="box flex ">
 
