EPPlus non commercial

--- a/CURD_Practice/Views/Persons/Index.cshtml
+++ b/CURD_Practice/Views/Persons/Index.cshtml
@@ -10,6 +10,7 @@
 	<a asp-controller="Persons" asp-action="PersonsPdf" class="link-hover">Download as PDF</a>
 	<a asp-controller="Persons" asp-action="PersonsCsv" class="link-hover">Download as CSV</a>
 	<a asp-controller="Persons" asp-action="PersonsCsvCustom" class="link-hover">Download as CSV</a>
+	<a asp-controller="Persons" asp-action="PersonsExcel" class="link-hover">Download as Excel</a>
 
 <div class="box flex ">
 
