--- a/CURD_Practice/Views/Shared/_Layout.cshtml
+++ b/CURD_Practice/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
             <ul>
                 <li>
                     <a asp-controller="Persons" asp-action="Index">Persons</a>
+                    <a asp-controller="Countries" asp-action="UploadFromExcel">Upload Countries</a>
                 </li>
             </ul>
         </div>
